# Cpp-OpenGLGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  Unix-Build.sh  Unix-BuildDebug.sh  Unix-Clean.sh  Unix-GenCodeBlocksProject.sh  Unix-GitPull.sh  Unix-GitPush.sh  Windows-Clean.bat  Windows-GenVisualStudioProject.bat  run
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
lib/Assimp/lib/: assimp-vc140-mt.exp
src/: Source.cpp
src/Core/: Application.hpp  Memory.hpp  Window.hpp  common.hpp
src/DataStructures/: Array.hpp  String.cpp  String.hpp
src/Game/: Game.cpp  Game.hpp
src/Math/: Color.cpp  Color.hpp  Math.hpp  Vector.cpp  Vector.hpp  VectorMath.cpp  VectorMath.hpp
src/Platform/: Platform.hpp  PlatformApplication.hpp  PlatformMath.hpp  PlatformMemory.hpp  PlatformRenderDevice.hpp  PlatformSIMDInclude.hpp  PlatformVecMath.hpp  PlatformWindow.hpp
src/Platform/Generic/: CMWC3096.c  CMWC3096.h  GenericMath.hpp  GenericMemory.cpp  GenericMemory.hpp  GenericVecMath.hpp
src/Platform/OpenGL/: OpenGLRenderDevice.cpp  OpenGLRenderDevice.hpp
src/Platform/SDL/: SDLApplication.cpp  SDLApplication.hpp  SDLWindow.cpp  SDLWindow.hpp
src/Platform/SSE/: SSEVector.hpp
src/Rendering/: RenderDevice.hpp
